--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
     <link href="/public/style.css" rel="stylesheet">
 </head>
 
-<body style="font-feature-settings: 'trad';">
+<body style="font-feature-settings:'';">
     <div style="padding: 16px">
         <div class="container">
             <div class="row">
