--- a/views/editor.html
+++ b/views/editor.html
@@ -18,7 +18,7 @@
     <link href="/public/style.css" rel="stylesheet">
 </head>
 
-<body style="font-feature-settings: 'trad';">
+<body style="font-feature-settings:'';">
     <div style="padding: 16px">
         <div class="container">
             <div class="row">
@@ -48,7 +48,6 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
                 <div class="col-auto" style="text-align: right;">
                     <div class="btn-group">
@@ -57,10 +56,11 @@
                             <%=loginAs.name%>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">New Post</a>
-                            <a class="dropdown-item" href="#">Drafts</a>
+                            <a class="dropdown-item" href="/user"><code class="gunjou">@<%= loginAs.username %></code></a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/user">Profile</a>
+                            <a class="dropdown-item" href="/newpost">New Post</a>
+                            <a class="dropdown-item" href="/draft">Drafts</a>
+                            <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/author/<%=loginAs.username%>">Posts</a>
                             <a class="dropdown-item" href="/dashboard">Dashboard</a>
                             <a class="dropdown-item" href="/random">Random Content</a>
