--- a/views/http-error.html
+++ b/views/http-error.html
@@ -18,7 +18,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
-<body style="font-feature-settings: 'trad'; font-size: 100%;">
+<body style="font-feature-settings:''; font-size: 100%;">
     <div style="padding: 16px">
         <div class="container">
             <div class="row">
