--- a/views/index-visitor.html
+++ b/views/index-visitor.html
@@ -18,7 +18,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
 
-<body style="font-feature-settings: 'trad'; font-size: 100%;">
+<body style="font-feature-settings:''; font-size: 100%;">
     <div style="padding: 16px">
         <div class="container">
             <div class="row">
@@ -58,7 +58,7 @@
                             aria-haspopup="true" aria-expanded="false" style="margin-top: 8px">
                             login
                         </button>
-                        <div class="dropdown-menu dropdown-menu-right">
+                        <div class="medium-padding dropdown-menu dropdown-menu-right">
                             <form class="px-2" style="text-align: right;" method="POST">
                                 <div class="form-group"><input name="username" type="text"
                                         class="form-control form-control-sm" id="usernamefield" placeholder="username">
@@ -67,7 +67,6 @@
                                     <input name="password" type="password" class="form-control form-control-sm"
                                         id="passwordfield" placeholder="password">
                                 </div>
-                                <div class="dropdown-divider"></div>
                                 <input class="btn btn-info btn-sm" type="submit" formaction="login" value="submit">
                             </form>
                         </div>
