--- a/views/ejs/common/comment.ejs
+++ b/views/ejs/common/comment.ejs
@@ -1,12 +1,20 @@
 <hr class="hr-thin">
 <div id="comment-<%=comment.id%>">
-  <% if (comment.parentComment) { %>
-    <code>&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
-    <% } %>
-  <div>
-    <span><%=comment.body%></span>
-  </div>
-  <div style="font-size: 90%;" class="post-data">
-    <code id="comment-no-<%=comment.id%>">#<%=i%></code> | <%=comment.author.name%> | <%=comment.createdAt.toLocaleString()%> | <a href="#replyto" id="replyto<%=i%>" value="<%=i%>">reply</a>
+  <div class="row">
+    <div class="col-auto">
+      <code id="comment-no-<%=comment.id%>">#<%=i%></code>
+    </div>
+    <div class="col">
+      <% if (comment.parentComment) { %>
+      <code>&gt; in reply to <a href="#comment-<%=comment.parentComment%>" id="link-to-<%=comment.parentComment%>"><%=comment.parentComment%></a></code>
+      <% } %>
+      <div>
+        <span><%=comment.body%></span>
+      </div>
+      <div style="font-size: 90%;" class="post-data">
+        <strong><%=comment.author.name%></strong> | <%=comment.createdAt.toLocaleString()%> | <a href="#replyto"
+          id="replyto<%=i%>" value="<%=i%>">reply</a>
+      </div>
+    </div>
   </div>
 </div>
